--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "dev": "ts-node ./src/server.ts",
     "test": "jest  --watchAll --detectOpenHandles --verbose",
     "test:c": "jest --watchAll --detectOpenHandles --verbose --coverage"
-
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
@@ -19,14 +18,17 @@
     "express": "^4.17.1",
     "http-status-codes": "^2.1.4",
     "joi": "^17.4.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "5.11.15",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.5"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
+    "@types/jsonwebtoken": "^8.5.8",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.1"
   }
