--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "config": "^3.3.3",
     "dotenv": "^8.2.0",
     "envalid": "^7.0.0",
     "express": "^4.17.1",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/config": "^0.0.38",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.8",
