--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node ./dist/src/server.js",
-    "dev": "ts-node ./src/server.ts",
+    "dev": "nodemon ./src/server.ts",
+    "dev:t": "ts-node ./src/server.ts",
     "test": "jest  --watchAll --detectOpenHandles --verbose",
     "test:c": "jest --watchAll --detectOpenHandles --verbose --coverage"
   },
