--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "5.11.15",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.5"
@@ -32,6 +33,7 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/nodemailer": "^6.4.0",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.1"
   }
