--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "5.11.15",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.7",
+    "supertest": "^6.2.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.5"
   },
@@ -34,6 +35,7 @@
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/nodemailer": "^6.4.0",
+    "@types/supertest": "^2.0.11",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.1"
   }
