--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node ./dist/src/server.js",
-    "dev": "nodemon ./src/server.ts",
+    "dev": "set NODE_ENV=development && nodemon ./src/server.ts",
+    "dev-prod": "set NODE_ENV=production && nodemon ./src/server.ts",
     "dev:t": "ts-node ./src/server.ts",
     "test": "jest  --watchAll --detectOpenHandles --verbose",
     "test:c": "jest --watchAll --detectOpenHandles --verbose --coverage"
@@ -24,6 +25,7 @@
     "mongoose": "5.11.15",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.7",
+    "production": "^0.0.2",
     "supertest": "^6.2.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.5"
