--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "http-status-codes": "^2.1.4",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "5.11.15",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.7",
@@ -36,6 +37,7 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/lodash": "^4.14.179",
     "@types/nodemailer": "^6.4.0",
     "@types/supertest": "^2.0.11",
     "jest": "^26.6.3",
