--- a/package.json
+++ b/package.json
@@ -25,11 +25,8 @@
     "lodash": "^4.17.21",
     "mongoose": "5.11.15",
     "nodemailer": "^6.7.2",
-    "nodemon": "^2.0.7",
     "production": "^0.0.2",
-    "supertest": "^6.2.2",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.5"
+    "supertest": "^6.2.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -41,6 +38,9 @@
     "@types/nodemailer": "^6.4.0",
     "@types/supertest": "^2.0.11",
     "jest": "^26.6.3",
-    "ts-jest": "^26.5.1"
+    "nodemon": "^2.0.7",
+    "ts-jest": "^26.5.1",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.5"
   }
 }
