--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "express": "^4.17.1",
     "http-status-codes": "^2.1.4",
     "joi": "^17.4.0",
+    "joi-objectid": "^4.0.2",
+    "joi-oid": "^1.1.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "5.11.15",
