--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev-prod": "set NODE_ENV=production&& nodemon ./src/server.ts",
     "dev:t": "ts-node ./src/server.ts",
     "test": "jest  --watchAll --detectOpenHandles --verbose",
-    "test:c": "jest --watchAll --detectOpenHandles --verbose --coverage"
+    "test:c": "jest --watchAll --detectOpenHandles --verbose --coverage",
+    "serve": "node ./dist/src/server.js"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
