--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./src/server.ts",
   "repository": "https://github.com/WebSolutions2k21/CodersCamp2021.Project.Node.git",
   "license": "MIT",
   "scripts": {
