--- a/package.json
+++ b/package.json
@@ -6,31 +6,15 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "start": "ts-node ./src/server.ts",
+    "start": "vercel dev",
     "dev": "set NODE_ENV=development&& nodemon ./src/server.ts",
     "dev-prod": "set NODE_ENV=production&& nodemon ./src/server.ts",
     "dev:t": "ts-node ./src/server.ts",
     "test": "jest  --watchAll --detectOpenHandles --verbose",
     "test:c": "jest --watchAll --detectOpenHandles --verbose --coverage",
-    "serve": "node ./dist/src/server.js"
+    "deploy": "vercel deploy --prod"
   },
   "dependencies": {
-    "bcrypt": "^5.0.0",
-    "config": "^3.3.7",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "envalid": "^7.0.0",
-    "express": "^4.17.1",
-    "http-status-codes": "^2.1.4",
-    "joi": "^17.4.0",
-    "joi-objectid": "^4.0.2",
-    "joi-oid": "^1.1.2",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.21",
-    "mongoose": "5.11.15",
-    "nodemailer": "^6.7.2",
-    "production": "^0.0.2",
-    "supertest": "^6.2.2",
     "@types/bcrypt": "^5.0.0",
     "@types/config": "^0.0.38",
     "@types/express": "^4.17.11",
@@ -39,10 +23,27 @@
     "@types/lodash": "^4.14.179",
     "@types/nodemailer": "^6.4.0",
     "@types/supertest": "^2.0.11",
+    "bcrypt": "^5.0.0",
+    "config": "^3.3.7",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "envalid": "^7.0.0",
+    "express": "^4.17.1",
+    "http-status-codes": "^2.1.4",
     "jest": "^26.6.3",
+    "joi": "^17.4.0",
+    "joi-objectid": "^4.0.2",
+    "joi-oid": "^1.1.2",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "mongoose": "5.11.15",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.7",
+    "production": "^0.0.2",
+    "supertest": "^6.2.2",
     "ts-jest": "^26.5.1",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.5"
+    "typescript": "^4.1.5",
+    "vercel": "^24.2.1"
   }
 }
