--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "start": "vercel dev",
+    "start": "set NODE_ENV=production&& vercel dev",
     "dev": "set NODE_ENV=development&& nodemon ./src/server.ts",
     "dev-prod": "set NODE_ENV=production&& nodemon ./src/server.ts",
     "dev:t": "ts-node ./src/server.ts",
