--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.7",
     "production": "^0.0.2",
+    "query-string": "^7.1.1",
     "supertest": "^6.2.2",
     "ts-jest": "^26.5.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.5",
-    "vercel": "^24.2.1"
+    "vercel": "^24.2.1",
+    "ws": "^8.6.0"
   }
 }
